# ferrisium

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile  package-lock.json  package.json  playwright.config.mjs  rustfmt.toml
.cargo/: config.toml  mutants.toml
.config/: nextest.toml
assets/: README.md  THIRD_PARTY_ASSETS.md
crates/ferrisium_anise/: Cargo.toml
crates/ferrisium_anise/src/: lib.rs
crates/ferrisium_anise/tests/: provider.rs
crates/ferrisium_bevy/: Cargo.toml
crates/ferrisium_bevy/src/: body_tiles.rs  celestial.rs  globe.rs  input_capture.rs  lib.rs  plugin.rs  tile_globe.rs  tiles.rs  view.rs
crates/ferrisium_bevy/src/body_tiles/: render.rs  requests.rs  state.rs  systems.rs
crates/ferrisium_bevy/src/geometry/: mod.rs  tube_mesh.rs
crates/ferrisium_bevy/src/globe/: camera.rs  focus.rs  input.rs  ray.rs  skybox.rs  state.rs  tests.rs
crates/ferrisium_bevy/src/globe/objects/: anchor.rs  label.rs  link.rs  mod.rs  position.rs
crates/ferrisium_bevy/src/metric/: camera.rs  mod.rs  visual.rs
crates/ferrisium_bevy/src/metric/scene/: mod.rs
crates/ferrisium_bevy/src/overlays/: common.rs  geo_polygon.rs  geo_polyline.rs  mod.rs
crates/ferrisium_bevy/src/overlays/h3/: mod.rs  types.rs
crates/ferrisium_bevy/src/raster/: fetch.rs  mod.rs  source.rs
crates/ferrisium_bevy/src/surface/: context.rs  depth.rs  mesh.rs  mod.rs
crates/ferrisium_bevy/src/tile_globe/: material.rs  mesh.rs  polar.rs  selection.rs
crates/ferrisium_bevy/src/tiles/: map_render.rs  requests.rs  state.rs  texture.rs
crates/ferrisium_core/: Cargo.toml
crates/ferrisium_core/src/: coords.rs  globe.rs  lib.rs  raster.rs  source.rs  space.rs  tiles.rs  view.rs
crates/ferrisium_core/src/space/: bodies.rs  ephemeris.rs  frames.rs  math.rs  render.rs  sky.rs  surface.rs  time.rs  trajectory.rs  units.rs
crates/ferrisium_core/tests/: coords_and_view.rs  globe.rs  source_and_tiles.rs  space.rs
crates/ferrisium_core/tests/common/: mod.rs
examples/ferrisium_demo/: Cargo.toml  index.html
examples/ferrisium_demo/assets/: THIRD_PARTY_ASSETS.md
examples/ferrisium_demo/assets/kernels/: README.md
examples/ferrisium_demo/assets/shaders/: solar_earth_atmosphere.wgsl  solar_earth_clouds.wgsl  solar_earth_night_lights.wgsl
examples/ferrisium_demo/src/: browser_params.rs  custom_geo_draw.rs  demo_config.rs  egui_overlay.rs  ephemeris_demo.rs  globe_mode.rs  h3_demo.rs  main.rs  map_mode.rs  solar_mode.rs  test_bridge.rs
examples/minimal_globe/: Cargo.toml  index.html
examples/minimal_globe/src/: main.rs
examples/minimal_map/: Cargo.toml  index.html
examples/minimal_map/src/: main.rs
scripts/: build_stacked_cubemap.py  fetch_anise_kernels.sh  static_no_cache_server.mjs  web_inspect.mjs
tests/browser/: demo_smoke.spec.mjs  fixtures.mjs  recorded_scenarios.scenario.spec.mjs
