[workspace]
members = [
    "crates/ferrisium_anise",
    "crates/ferrisium_core",
    "crates/ferrisium_bevy",
    "examples/ferrisium_demo",
    "examples/minimal_globe",
    "examples/minimal_map",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.91"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
print_stdout = "deny"
print_stderr = "deny"
empty_structs_with_brackets = "deny"
needless_pass_by_value = "allow"

[workspace.dependencies]
anise = { version = "0.9", default-features = false }
bevy = { version = "0.18", default-features = false, features = [
    "async_executor",
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_image",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_render",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "jpeg",
    "keyboard",
    "mouse",
    "png",
    "reflect_auto_register",
    "std",
    "tonemapping_luts",
    "wayland",
    "webgl2",
    "x11",
    "zstd_rust",
] }
big_space = { version = "0.12", default-features = false, features = ["std"] }
bytes = "1"
ehttp = "0.5"
ferrisium_anise = { path = "crates/ferrisium_anise" }
ferrisium_bevy = { path = "crates/ferrisium_bevy" }
ferrisium_core = { path = "crates/ferrisium_core" }
geo = "0.32"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
h3o = { version = "0.9.4", features = ["geo"] }
js-sys = "0.3"
proptest = "1"
wasm-bindgen = "0.2"

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = "debuginfo"

[profile.wasm-dev]
inherits = "dev"
debug = 0
panic = "abort"
