[package]
name = "minimal_globe"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
ferrisium_bevy.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true
